--- a/src/component/hub/header/header.css
+++ b/src/component/hub/header/header.css
@@ -4,14 +4,14 @@ height: 13vh;
 background: #FFFFFF 0% 0% no-repeat padding-box;
 border-radius: 8px;
 opacity: 1;
-margin: 10px -190px;
-
+margin: 0px -40px;
 }
+
 .Category{
   margin: 0px 5px;
 }
 #dropdown-basic{
-  width: 127px;
+  width: 8vw;
 height: 46px;
 background: #EEE5FC 0% 0% no-repeat padding-box;
 border: 1px solid #EEE5FC;
@@ -35,8 +35,9 @@ opacity: 1;
   opacity: 1;
   color: #9F61FF;
 }
+
 .input_task_or_project{
-  width: 626px;
+  width: 18vw;
 height: 46px;
 background: #EEE5FC 0% 0% no-repeat padding-box;
 border-radius: 8px;
@@ -45,7 +46,7 @@ color:#B5B9C9;
 margin: 0px 95px;
 }
 .date{
-  width: 190px;
+  width: 10vw;
 height: 46px;
 background: #FFFFFF 0% 0% no-repeat padding-box;
 border: 1px solid #979797;
@@ -64,13 +65,18 @@ text-align: center;
 #date1{
   border:white;
   cursor: pointer;
+  width: 9vw;
 }
 #date1:focus{
    outline:none;
 }
+#workpas{
+  background-color: #ffe6e6;
+  color:   #ff3333;
+}
 #inputText{
   margin: 0px 10px;
-    width: 100%;
+    width: 22vw;
     height:70%;
     border: none;
     border-bottom: none;
@@ -84,7 +90,7 @@ text-align: center;
  
 } 
 .START{
-width: 246px;
+width: 25vw;
 height: 46px;
 background: #5E81F4 0% 0% no-repeat padding-box;
 border-radius: 8px;
@@ -92,7 +98,7 @@ opacity: 1;
 color:WHITE;
 cursor: pointer;
 text-align: center;
-margin: 0px 30px;
+margin: 0px 10px;
 }
 .Type{
   margin: 0px 45px;
@@ -102,7 +108,7 @@ margin: 0px 30px;
 }
 .type_category{
   text-align: center;
-width: 160px;
+width: 9vw;
 height:46px;
 background: #FFFFFF 0% 0% no-repeat padding-box;
 border: 1px solid #979797;
