--- a/src/component/hub/team/style.css
+++ b/src/component/hub/team/style.css
@@ -6,13 +6,24 @@
   font-size: 14px;
   line-height: 1.7;
 }
-
+/* 
 body {
   background-color: #eaeaea;
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100vh;
+} */
+
+
+.viewer{
+  border: #007bff solid 1px;
+}
+.editor{
+  border: #15cc3e solid 1px;
+}
+.maneger{
+  border: #9f61ff solid 1px;
 }
 
 .wrapper {
