--- a/src/component/warps/configurator/new_project/new_project.css
+++ b/src/component/warps/configurator/new_project/new_project.css
@@ -1,5 +1,5 @@
 .right_nav{
-  width: 299px;
+  /* width: 299px; */
 height: 87vh;
 background: #3A405E 0% 0% no-repeat padding-box;
 border: 1px solid #707070;
