--- a/src/component/warps/configurator/configurator.css
+++ b/src/component/warps/configurator/configurator.css
@@ -1,12 +1,12 @@
 @media screen and (min-width: 600px) {
 .right_nav{
-  width: 299px;
+  /* width: 299px; */
 height: 87vh;
 background: #3A405E 0% 0% no-repeat padding-box;
 border: 1px solid #707070;
 border-radius: 80px 0px 0px 0px;
-opacity: 1;
-margin: 0px -40px;
+/* opacity: 1; */
+/* margin: 0px -40px; */
 
 }
 }
