--- a/src/component/warps/nav/nav.css
+++ b/src/component/warps/nav/nav.css
@@ -1,5 +1,6 @@
 .nav{
   width: 100vw;
+  z-index: 3;
 height: 8vh;
 background: #FFFFFF 0% 0% no-repeat padding-box;
 box-shadow: 0px 3px 6px #00000029;
