--- a/src/component/warps/configurator/configurator.css
+++ b/src/component/warps/configurator/configurator.css
@@ -1,7 +1,8 @@
 @media screen and (min-width: 600px) {
 .right_nav{
   /* width: 299px; */
-height: 87vh;
+/* height: 87vh; */
+
 background: #3A405E 0% 0% no-repeat padding-box;
 border: 1px solid #707070;
 border-radius: 80px 0px 0px 0px;
