--- a/src/component/warps/nav/nav.css
+++ b/src/component/warps/nav/nav.css
@@ -1,14 +1,9 @@
 .nav{
   width: 100vw;
   z-index: 3;
-height: 8vh;
 background: #FFFFFF 0% 0% no-repeat padding-box;
 box-shadow: 0px 3px 6px #00000029;
 opacity: 1;
 box-shadow: 0px 3px 6px #0A26B126;
 }
-.logo{
-  width: 200px;
-  height: 220px;
-  margin: 20px 15px;
-}
+.logo{}
