show platform with routing

--- a/src/component/hub/warkspacePlatform/workspacePlatform.css
+++ b/src/component/hub/warkspacePlatform/workspacePlatform.css
@@ -23,3 +23,8 @@ color:#778CA2;
       background-color:#EAEAEA;
       
   }
+  .aa{
+      color:teal !important;
+      font-size: xx-large;
+      background-color: tomato !important;
+  }
