--- a/src/component/hub/workspace/viewWorkspace/viewWorkspace.css
+++ b/src/component/hub/workspace/viewWorkspace/viewWorkspace.css
@@ -34,28 +34,29 @@
 }
 
 .cardWorkspace{
-   width: 13rem;
+   width: 10rem;
    background: #F6F6FA;
-   height: 10rem;
+   height: 9rem;
    margin-bottom: 10px;
    text-align: center;
    justify-content: center;
    align-items: center;
    border-radius: 10px;
+   margin-right: 1rem;
 
 }
-.cardWorkspace:hover{
+  .cardWorkspace:hover{
    background: #F6F6FA 0% 0% no-repeat padding-box;
    border: 1px solid #9DA0AF;
    border-radius: 10px;
 }
 
 .checkWorkspace{
-   margin-left: -128px;
+   margin-left: -103px;
 }
 
 .nameWorkspace{
-   font: normal normal normal 16px/45px Roboto;
+   font: normal normal normal 13px/34px Roboto;
    letter-spacing: 0px;
    color: #1c1d21d5;
    text-transform: capitalize;
