--- a/src/component/warps/configurator/viewWorkspaceName/viewWorkspaceName.css
+++ b/src/component/warps/configurator/viewWorkspaceName/viewWorkspaceName.css
@@ -3,3 +3,12 @@
     color: #979797;
     text-align: left;
 }
+.right_nav{
+  width: 30vw;
+height: 87vh;
+background: #3A405E 0% 0% no-repeat padding-box;
+border: 1px solid #707070;
+border-radius: 80px 0px 0px 0px;
+opacity: 1;
+
+}
