view card and task in project platform

--- a/src/component/hub/projectPlatform/projectPlatform.css
+++ b/src/component/hub/projectPlatform/projectPlatform.css
@@ -1,5 +1,10 @@
-.aaa{
-    color: greenyellow;
-    font-size: xx-large;
-    background-color: hotpink;
-}
+.body{
+    width:70vw;
+    height:80vh;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border-radius: 12px;
+    opacity: 1;
+    
+    /* margin: 0px -40px; */
+  }
+  
