--- a/src/component/hub/projectPlatform/projectPlatform.css
+++ b/src/component/hub/projectPlatform/projectPlatform.css
@@ -3,3 +3,14 @@
     font-size: xx-large;
     background-color: hotpink;
 }
+
+.body{
+    width:70vw;
+    height:80vh;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border-radius: 12px;
+    opacity: 1;
+    
+    /* margin: 0px -40px; */
+  }
+  
