--- a/src/component/hub/workspace/allWorkspaces/allWorkspace.css
+++ b/src/component/hub/workspace/allWorkspaces/allWorkspace.css
@@ -5,34 +5,25 @@
     }
 
 .MyWorkspace{
-    color: #778CA2;
+    color:black;
     font-size: x-large;
     
 }
 .renderedListWorkspaces{
-    margin-Right: '4px' 
+    margin-Right: 25px; 
+   margin-top:20px;
+
 }
 hr{
     width: 60vw;
     color:#707070;
 }
-.LIST{
-    color:#98A9BC;
-    font-size: x-large;
+.grid{
     cursor: pointer;
+   
 }
-.GRID1{
-    color:#98A9BC;
-    font-size: x-large;
+.list{
     cursor: pointer;
+    
 }
-.GRID{
-color:#0A102E;
-font-size: x-large;
-cursor: pointer;
-}
-.LIST1{
-    color:#0A102E;
-font-size: x-large;
-cursor: pointer;
-}
+
