--- a/src/component/hub/workspace/viewWorkspace/ViewWorkspace/ViewWorkspaceGrid/ViewWorkspaceGrid.css
+++ b/src/component/hub/workspace/viewWorkspace/ViewWorkspace/ViewWorkspaceGrid/ViewWorkspaceGrid.css
@@ -5,7 +5,7 @@
     height: 6vh;
    border-radius: 50%;
    font-size: 26px;
-   padding-top: 8px;
+   padding-top: 4px;
    color: white;
    letter-spacing: 1.72px;
    text-align: center;
@@ -15,9 +15,8 @@
 }
 
 
-
 .Workspace{
-   width: 14vw;
+   width: 6vw;
    background: #F6F6FA;
    height: 8vh;
    margin-bottom: 10px;
@@ -25,7 +24,9 @@
    justify-content: center;
    align-items: center;
    border-radius: 10px;
-   margin-right: 1rem;
+
+   margin-left: 3rem;
+
 
 }
 
