--- a/src/component/hub/workspace/viewWorkspace/ViewWorkspace/ViewWorkspacelist/viewWorkspacelist.css
+++ b/src/component/hub/workspace/viewWorkspace/ViewWorkspace/ViewWorkspacelist/viewWorkspacelist.css
@@ -1,18 +1,8 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
-.workspaceColor{
-   width: 40px;
-   height: 40px;
-   border-radius: 16px;
-   font-size: x-large;
-   text-align: center;
-   color:white;
-   margin-top: auto;
-}
 
 .logoWorkspace{
-    width: 54px;
-    height: 54px;
+    width: 4rem;
+    height:4rem;
    border-radius: 50%;
    font-size: 26px;
    padding-top: 8px;
@@ -21,23 +11,26 @@
    text-align: center;
    font-family: 'Roboto', sans-serif;
    /* font-size: xx-large; */
+   border:none;
      
 }
 
-.logoWorkspace:hover{
-   color: var(--unnamed-color-ffffff);
-   text-align: center;
-   font: normal normal medium 41px/54px Roboto;
-   letter-spacing: 1.72px;
-   color: #FFFFFF;
-   text-transform: uppercase;
-   opacity: 1;
+.card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: none;
+    border-radius: .25rem;
 }
 
 .cardWorkspace{
-   width: 10rem;
+   width: 8rem;
    background: #F6F6FA;
-   height: 9rem;
+   height: 8rem;
    margin-bottom: 10px;
    text-align: center;
    justify-content: center;
@@ -47,16 +40,6 @@
 
 }
 
-.cardWorkspace:hover{
-   background: #F6F6FA 0% 0% no-repeat padding-box !important;
-   border: 1px solid #9DA0AF ‏;
-}
-
-  .cardWorkspace:hover{
-   background: #F6F6FA 0% 0% no-repeat padding-box !important;
-   border: 1px solid #9DA0AF !important
-
-}
 
 .checkWorkspace{
    margin-left: -103px;
@@ -71,11 +54,3 @@
    text-transform: capitalize;
 }
 
-.nameWorkspace:hover{
-   text-align: center;
-   font: normal normal medium 20px/24px Roboto;
-   letter-spacing: 0px;
-   color: #1C1D21;
-   text-transform: capitalize;
-   opacity: 1;
-}
