--- a/src/component/hub/workspace/allWorkspaces/allWorkspace.css
+++ b/src/component/hub/workspace/allWorkspaces/allWorkspace.css
@@ -26,4 +26,12 @@ hr{
     cursor: pointer;
     
 }
+.scrollbar{
+    overflow-y: scroll;
+    height: 435px;
+}
+.scrollbar::-webkit-scrollbar {
+    width: 6px;
+    /* height: 6px; */
+  }
 
