--- a/src/component/hub/workspace/veiwWorkspace/viewWorkspaceGrid/viewWorkspaceGrid.css
+++ b/src/component/hub/workspace/veiwWorkspace/viewWorkspaceGrid/viewWorkspaceGrid.css
@@ -1,23 +1,25 @@
 
 .logoWorkspaceGrid{
-    width: 3vw;
-    height: 6vh;
+     width: 4rem;
+    height:4rem;
    border-radius: 50%;
    font-size: 26px;
-   padding-top: 4px;
+   padding-top: 8px;
    color: white;
    letter-spacing: 1.72px;
    text-align: center;
    font-family: 'Roboto', sans-serif;
    /* font-size: xx-large; */
+   border:none;
      
 }
 
 
 .Workspace{
-   width: 6vw;
+   width: 1vw;
+ 
    background: #F6F6FA;
-   height: 8vh;
+   height: auto;
    margin-bottom: 10px;
    text-align: center;
    justify-content: center;
