--- a/src/component/hub/workspace/allWorkspaces/allWorkspace.css
+++ b/src/component/hub/workspace/allWorkspaces/allWorkspace.css
@@ -15,15 +15,19 @@
 
 }
 hr{
-    width: 57vw;
+    width: 72rem;
     color:#707070;
 }
+@media screen and (min-width: 108px){
 .grid{
     cursor: pointer;
-   
+    
 }
+}
+ @media screen and (min-width: 768px){
 .list{
     cursor: pointer;
     
+}
 }
 
