--- a/src/component/hub/workspace/veiwWorkspace/viewWorkspacelist.css/viewWorkspacelist.css
+++ b/src/component/hub/workspace/veiwWorkspace/viewWorkspacelist.css/viewWorkspacelist.css
@@ -1,5 +1,5 @@
 
-.logoWorkspace{
+.logoWorkspacelist{
     width: 4rem;
     height:4rem;
    border-radius: 50%;
@@ -14,22 +14,12 @@
      
 }
 
-.card {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    min-width: 0;
-    word-wrap: break-word;
-    background-color: #fff;
-    background-clip: border-box;
-    border: none;
-    border-radius: .25rem;
-}
 
-.cardWorkspace{
-   width: 8rem;
+
+.Workspace1{
+   width: 4rem;
    background: #F6F6FA;
-   height: 8rem;
+   height: 4rem;
    margin-bottom: 10px;
    text-align: center;
    justify-content: center;
@@ -40,16 +30,4 @@
 }
 
 
-.checkWorkspace{
-   margin-left: -103px;
-   position: absolute;
-   margin-top: -84px;
-}
-
-.nameWorkspace{
-   font: normal normal normal 13px/34px Roboto;
-   letter-spacing: 0px;
-   color: #1c1d21d5;
-   text-transform: capitalize;
-}
 
