dropDoun also works perfectly in projectPlatform

--- a/src/component/hub/dropDownWorkspace/dropDownWorkspace.css
+++ b/src/component/hub/dropDownWorkspace/dropDownWorkspace.css
@@ -20,7 +20,7 @@ option{
 a{
     color: #98A9BC!important;
     display: inline-block;
-    float: right;
+    /* float: right; */
     
 }
 .textLogo{
