workspace_responsivi_mk_

--- a/src/component/hub/workspace/veiwWorkspace/viewWorkspaceGrid/viewWorkspaceGrid.css
+++ b/src/component/hub/workspace/veiwWorkspace/viewWorkspaceGrid/viewWorkspaceGrid.css
@@ -30,7 +30,7 @@ font-size: small;
    font-family: 'Roboto', sans-serif;
    /* font-size: xx-large; */
    border:none;
-   
+   font-weight: 600;
 
 
 }
