--- a/src/component/hub/body/body.css
+++ b/src/component/hub/body/body.css
@@ -1,6 +1,6 @@
 .body{
-  width:70vw;
-  height:80vh;
+  width:70rem;
+  height:80rem;
   background: #FFFFFF 0% 0% no-repeat padding-box;
   border-radius: 12px;
   opacity: 1;
