--- a/src/component/hub/workspace/allWorkspaces/allWorkspace.css
+++ b/src/component/hub/workspace/allWorkspaces/allWorkspace.css
@@ -16,5 +16,12 @@ cursor: pointer;
 }
 .MyWorkspace{
     font-size: x-large;
+       font-weight: 505;
+}
+.borderBottom{
+    border-bottom:black 1px solid ;
+      display: flex;
+  justify-content:space-between; 
+   
 }
 
