--- a/src/component/hub/project/viewProject/cell.css
+++ b/src/component/hub/project/viewProject/cell.css
@@ -6,6 +6,7 @@
     text-align: center;
     text-transform: capitalize;
     display: block;
+    font-size: small;
 
 }
 
@@ -17,4 +18,5 @@
     letter-spacing: 0px;
     color: #202224;
     opacity: 0.9;
+    font-size: small;
 }
