--- a/src/component/warps/configurator/newConfigurator/new_configurator.css
+++ b/src/component/warps/configurator/newConfigurator/new_configurator.css
@@ -1,14 +1,13 @@
-.right_nav{
-    /* width: 299px; */
+.left_nav{
   height: 100vh;
-  background: #3A405E 0% 0% no-repeat padding-box;
+  background: #0A102E 0% 0% no-repeat padding-box;
   border: 1px solid #707070;
-  border-radius: 80px 0px 0px 0px;
-  margin-top:-9vh;
-  /* margin-left: 1vw; */
+  border-radius: 0px 80px 0px 0px;
+  margin-top:-7vh; 
+ 
   }
   .list_config{
-    padding-top: 10vh;
+    padding-top: 8vh;
   }
   ul{
     padding-left: 0;
