--- a/src/component/warps/configurator/viewWorkspaceName/viewWorkspaceName.css
+++ b/src/component/warps/configurator/viewWorkspaceName/viewWorkspaceName.css
@@ -6,9 +6,10 @@
 .right_nav{
   /* width: 30vw; */
 /* height: 87vh; */
-background: #0A102E 0% 0% no-repeat padding-box;
+/* background: #0A102E 0% 0% no-repeat padding-box;
 border: 1px solid #707070;
-border-radius: 0px 80px 0px 0px;
+border-radius: 0px 80px 0px 0px; */
+left: 0;
 opacity: 1;
 
 }
