--- a/src/component/warps/nav/nav.css
+++ b/src/component/warps/nav/nav.css
@@ -1,6 +1,7 @@
 .nav{
-  width: 100vw;
+  /* width: 100vw; */
   /* z-index: 3; */
+height: 7vh;
 background: #FFFFFF 0% 0% no-repeat padding-box;
 box-shadow: 0px 3px 6px #00000029;
 opacity: 1;
