workspace_edit&add&delet

--- a/src/component/hub/workspace/allWorkspaces/allWorkspace.css
+++ b/src/component/hub/workspace/allWorkspaces/allWorkspace.css
@@ -14,12 +14,13 @@ cursor: pointer;
 cursor: pointer;
 
 }
+
 .MyWorkspace{
     font-size: x-large;
        font-weight: 505;
 }
 .borderBottom{
-    border-bottom:black 1px solid ;
+    border-bottom:#808080 1px solid ;
       display: flex;
   justify-content:space-between; 
    
