--- a/src/component/hub/workspace/veiwWorkspace/viewWorkspaceGrid/viewWorkspaceGrid.css
+++ b/src/component/hub/workspace/veiwWorkspace/viewWorkspaceGrid/viewWorkspaceGrid.css
@@ -15,6 +15,19 @@ font-size: small;
 
     
 }
+.add
+{
+  cursor: pointer;
+}
+.delet{
+   cursor: pointer;
+}
+.edit{
+     cursor: pointer;
+}
+
+
+
 
 
 .logoWorkspace1{
@@ -30,7 +43,7 @@ font-size: small;
    font-family: 'Roboto', sans-serif;
    /* font-size: xx-large; */
    border:none;
-   font-weight: 600;
+   font-weight: 50;
 
 
 }
