--- a/src/component/hub/workspace/veiwWorkspace/viewWorkspacelist/viewWorkspacelist.css
+++ b/src/component/hub/workspace/veiwWorkspace/viewWorkspacelist/viewWorkspacelist.css
@@ -11,15 +11,17 @@
    font-family: 'Roboto', sans-serif;
    /* font-size: xx-large; */
    border:none;
-      font-weight: 600; 
+      font-weight: 590; 
+      margin: 8px;
       
      
 }
 
 
+
 .Workspace{
-   width: 4rem;
- height: 4rem;
+   width: 5rem;
+ height: 5rem;
    background: #F6F6FA;
    height: auto;
    margin-bottom: 10px;
@@ -27,6 +29,7 @@
    justify-content: center;
    align-items: center;
    border-radius: 10px;
+     border-bottom: #DCDCDC 1px solid ;
 
    margin-left: 3rem;
 
