--- a/src/component/hub/Cards/viewCards/viewCards.css
+++ b/src/component/hub/Cards/viewCards/viewCards.css
@@ -5,7 +5,7 @@
     color: #000000;
     /* border-bottom: gray solid 1px; */
     background-color:transparent;
-    border-bottom: 1px  solid #d3d2d2 ;
+    border-bottom: 1px  solid #c7c6c6 ;
 
 }
 .triangle{
