--- a/src/component/hub/projectPlatform/projectPlatform.css
+++ b/src/component/hub/projectPlatform/projectPlatform.css
@@ -24,17 +24,19 @@
 box-shadow: 0px 3px 6px #00000029;
 border-radius: 50px;
 opacity: 1;
-width: 65px;
-height: 65px;
+width: 50px;
+height: 50px;
 /* right:0; */
-margin-left: 58vw;
-/* position: relative; */
+margin-left: 68vw;
+
+top:85vh;
+position: fixed;
 color:white;
-font-size: 45px;
+font-size: 30px;
   }
   
   .add-new-btn::first-letter{
     margin-block-end:auto;
-    margin-left: 1.2vw;
+    margin-left: 1.05vw;
 
   } 
