--- a/src/component/warps/nav/nav.css
+++ b/src/component/warps/nav/nav.css
@@ -5,4 +5,5 @@ background: #FFFFFF 0% 0% no-repeat padding-box;
 box-shadow: 0px 3px 6px #00000029;
 opacity: 1;
 box-shadow: 0px 3px 6px #0A26B126;
+height: 10vh;
 }
