--- a/src/App.css
+++ b/src/App.css
@@ -3,24 +3,9 @@ body{
   overflow-x: hidden;
   overflow-y: hidden;
 }
-.btn-success:not(:disabled):not(.disabled):active:focus, .show>.btn-success.dropdown-toggle:focus {
-    box-shadow:none;
-}
-.btn-success.focus, .btn-success:focus {
-    color:none;
-    background-color: none;
-    border-color: none;
-    box-shadow: none;
-}
-.dropdown-toggle::after {
-        /* display: block !important; */
-        transform: rotate(-90deg) !important;
-        float:right !important;
-        padding-top: 2vh !important;
-        /* vertical-align: middle !important; */
-        /* margin-left: 20px; */
-    
 
+button{
+  cursor: pointer !important;
 }
 
 
