--- a/src/component/hub/workspace/viewWorkspace/viewWorkspacelist/viewWorkspacelist.css
+++ b/src/component/hub/workspace/viewWorkspace/viewWorkspacelist/viewWorkspacelist.css
@@ -19,7 +19,7 @@
 
 
 
-.Workspace1{
+.Workspace{
    width: 5rem;
    background: #F6F6FA;
    height: 5rem;
@@ -31,6 +31,9 @@
    margin-right: 1rem;
 
 }
+.WorkspaceList:hover{
+  background-color:#F6F6FA;
+}
 .WorkspaceList{
      border-bottom:#F6F6FA 1px solid ;
       display: flex;
@@ -38,7 +41,7 @@
 }
 .WorkspaceList
 {
-    width: 62vw;
+    width: 67vw;
 }
 .stripe{
     color:#F6F6FA ;
