--- a/src/component/hub/workspace/viewWorkspace/viewWorkspaceGrid/viewWorkspaceGrid.css
+++ b/src/component/hub/workspace/viewWorkspace/viewWorkspaceGrid/viewWorkspaceGrid.css
@@ -18,16 +18,24 @@ font-size: small;
 
 .editWorkspace{
    height: 100vh;
-   width: 30vw;
+   width: 12vw;
+    position: absolute;
+  top: -85px;
+  right: 0;
    background-color: white;
-   margin-left: auto;
+   /* border: 2px solid;
+border-style: solid dotted inset double; */
+    border-left:solid #1AFFFC  8px;
+   
 
+ 
 }
-.path{
-   height: 100vh;
-   width: 6vw;
-   background-color: transparent linear-gradient(181deg, #1AFFFC 8%, #007FFF 100%) 0% 0% no-repeat padding-box;;
+.okEditWorkspace{
+   width: 35px;
+   height: 20px;
+    background-color:transparent linear-gradient(181deg, #1AFFFC 8%, #007FFF 100%) 0% 0% no-repeat padding-box
 }
+
 
 .add
 {
