--- a/src/component/hub/projectPlatform/projectPlatform.css
+++ b/src/component/hub/projectPlatform/projectPlatform.css
@@ -29,10 +29,23 @@ height: 50px;
 /* right:0; */
 margin-left: 68vw;
 
-top:85vh;
+bottom:10vh;
 position: fixed;
 color:white;
 font-size: 30px;
+cursor: pointer;;
+  }
+  .add-new-btn:hover{
+    background: var(--unnamed-color-ffffff) 0% 0% no-repeat padding-box;
+    border: 3px solid var(--unnamed-color-00d8ff);
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    box-shadow: 0px 3px 6px #00000029;
+    border: 3px solid #00D8FF;
+    border-radius: 50px;
+    opacity: 1;
+    font-size: 30px;
+    color:  #00D8FF;
+
   }
   
   .add-new-btn::first-letter{
@@ -40,3 +53,13 @@ font-size: 30px;
     margin-left: 1.05vw;
 
   } 
+
+  .add-new-btn:hover:first-letter {
+    margin-bottom: 1.5vh;
+    transform: rotate(45deg); 
+    margin-left:0.85vw;
+    transform: rotate(45deg) !important;
+
+
+    
+} 
