--- a/src/component/hub/project/viewProject/cell.css
+++ b/src/component/hub/project/viewProject/cell.css
@@ -1,15 +1,3 @@
-.description{
-    text-align: center;
-    /* font: normal normal normal 14px/19px Roboto; */
-    letter-spacing: 0px;
-    color: #98A9BC;
-    text-align: center;
-    text-transform: capitalize;
-    display: block;
-    font-size: small;
-
-}
-
 .item{
     display: block;
     /* text-align: left; */
@@ -18,5 +6,5 @@
     letter-spacing: 0px;
     color: #202224;
     opacity: 0.9;
-    font-size: small;
+    font-size: x-small;
 }
