--- a/src/component/hub/workspace/viewWorkspace/viewWorkspaceGrid/viewWorkspaceGrid.css
+++ b/src/component/hub/workspace/viewWorkspace/viewWorkspaceGrid/viewWorkspaceGrid.css
@@ -44,21 +44,23 @@ font-size: small;
     height:4rem;
    border-radius: 50%;
    font-size: 26px;
-   padding-top: 8px;
+   padding-top:8px;
    color: white;
    letter-spacing: 1.72px;
-   text-align: center;
+   text-align: 30px;
    font-family: 'Roboto', sans-serif;
-   /* font-size: xx-large; */
-   border:none;
-   font-weight: 50;
-      
+   font-size: xx-large;
+   margin-top: 30px;
+}
 
+      
+.name{
+   margin-top: 33px;
 }
 
 
+
 .logoWorkspace1{
-    
     width: 4rem;
     height:4rem;
    border-radius: 50%;
@@ -68,10 +70,10 @@ font-size: small;
    letter-spacing: 1.72px;
    text-align: center;
    font-family: 'Roboto', sans-serif;
-   /* font-size: xx-large; */
-   border:none;
-   font-weight: 50;
+   font-size: xx-large;
+   /* margin-top: 30px; */
+}
    
 
 
-}
+
