--- a/src/component/hub/workspace/editWorkspace/editWorkspace.css
+++ b/src/component/hub/workspace/editWorkspace/editWorkspace.css
@@ -1,3 +1,19 @@
-.edit_workspace_name{
-    background-color: red;
-}
+
+    .edit_workspace_name{
+
+    background-color: white;
+    color:black;
+    border:none;
+    border-bottom: 1px solid #8181A5;
+  width: 15vw;
+  margin: 0px -50px;
+    }
+
+   .edit_workspace_name:focus {
+    outline:none;
+   
+  } 
+  .close_edit{
+      font-size: x-large;
+      font-weight: 600;
+  }
