--- a/src/component/hub/project/viewProject/viewProject.css
+++ b/src/component/hub/project/viewProject/viewProject.css
@@ -49,6 +49,10 @@
     border-top: 1px solid #dee2e6;
 }
 
+.projectForWorkspace td{
+    
+}
+
 .task{
     display: block !important;
     width: 100% !important;
