--- a/src/component/hub/SelectHeader/selectWorkspace/selectWorkspace.css
+++ b/src/component/hub/SelectHeader/selectWorkspace/selectWorkspace.css
@@ -11,7 +11,7 @@
     position: relative;
 
 }
-.css-1uccc91-singleValue, .css-1wa3eu0-placeholder{
+.select-workspace .css-1uccc91-singleValue, .select-workspace .css-1wa3eu0-placeholder,.select-workspace .css-b8ldur-Input{
    margin-left: 3vw !important;
 
 }
