--- a/src/component/hub/task/viewTaskByCard/ViewTaskByCrad.css
+++ b/src/component/hub/task/viewTaskByCard/ViewTaskByCrad.css
@@ -25,9 +25,16 @@
   .check-task button:focus{
     outline: 0;
   }
-  
+  .check-task:first-child{
+    text-align: left !important;
+    padding-left: 3vw;
+  }
+  .check-task:nth-child(2){
+    text-align: right !important;
+  }
   .check-task{
     /* margin-right:0.5vw; */
+    font-size: 14px;
     margin-bottom: 0px !important;
   }
   
@@ -110,39 +117,46 @@
     background: var(--unnamed-color-fe4d97) 0% 0% no-repeat padding-box;
     background: #ffa5ca 0% 0% no-repeat padding-box;
     border-radius: 3px;
-    color:#FE4D97 !important;
+    color:#fa086d !important;
     font-weight: 300;
     opacity: 0.9;
     margin: auto;
     width: 75%;
-    padding-top: 0.7vh;
-    padding-bottom: 0.7vh;
-
+    padding-top: 0.5vh;
+    padding-bottom: 0.5vh;
+    opacity: 0.6;
+    font-weight: 400;
 
   }
   .status-task-to-do{
     background: var(--unnamed-color-fe4d97) 0% 0% no-repeat padding-box;
     background: #F0D923 0% 0% no-repeat padding-box;
     border-radius: 3px;
-    color:#BDAA1C !important;
+    color:#ac9806 !important;
     font-weight: 300;
     opacity: 0.9;
     margin: auto;
     width: 75%;
-    padding-top: 0.7vh;
-    padding-bottom: 0.7vh;
+    padding-top: 0.5vh;
+    padding-bottom: 0.5vh;
+    opacity: 0.6;
+    font-weight: 400;
+
   }
   .status-task-done{
     background: var(--unnamed-color-fe4d97) 0% 0% no-repeat padding-box;
     background:#44D7B6 0% 0% no-repeat padding-box;
     border-radius: 3px;
-    color:#34A38B !important;
+    color:#038f70 !important;
     font-weight: 300;
     opacity: 0.9;
     margin: auto;
     width: 75%;
-    padding-top: 0.7vh;
-    padding-bottom: 0.7vh;
+    padding-top: 0.5vh;
+    padding-bottom: 0.5vh;
+        opacity: 0.6;
+        font-weight: 400;
+
 
   }
 .closeDet{
