--- a/src/component/hub/Cards/viewCards/viewCards.css
+++ b/src/component/hub/Cards/viewCards/viewCards.css
@@ -13,7 +13,7 @@
         height: 0; 
         border-left: 6px solid transparent;
         border-right: 6px solid transparent; 
-        border-top: 6px solid #778CA2;
+        border-top: 6px solid black;
 }
 .show-card{
     background-color: transparent;
