--- a/src/component/warps/nav/nav.css
+++ b/src/component/warps/nav/nav.css
@@ -1,10 +1,10 @@
 .nav{
-  width: 100vw;
-height: 7vh;
+  width: 100%;
+/* height: 7vh; */
 background: #FFFFFF 0% 0% no-repeat padding-box;
-box-shadow: 0px 3px 6px #00000029;
+/* box-shadow: 0px 3px 6px #00000029; */
 opacity: 1;
-box-shadow: 0px 3px 6px #0A26B126;
+/* box-shadow: 0px 3px 6px #0A26B126; */
 }
 .nav img {
   width: 32px;
