--- a/src/component/hub/projectPlatform/projectPlatform.css
+++ b/src/component/hub/projectPlatform/projectPlatform.css
@@ -1,48 +1,38 @@
 .body{
     /* width:70vw; */
-    height:75vh;
+    height:80vh;
     background: #FFFFFF 0% 0% no-repeat padding-box;
     border-radius: 12px;
     opacity: 1;  
   }
-  /* a{
-      color: #98A9BC!important;
-      display: inline-block;
-      float: right;
-      
-  } */
-  
- 
   .logoW{
     margin-top: 3vh !important;
     margin-left: 5vh !important;
   }
   .add-new-btn{
-    background: transparent linear-gradient(217deg, #1AFFFC 0%, #1AFFFC 0%, #007FFF 100%) 0% 0% no-repeat padding-box;
-box-shadow: 0px 3px 6px #00000029;
-border-radius: 50px;
-opacity: 1;
-width: 50px;
-height: 50px;
-/* right:0; */
-margin-left: 75vw;
-
-bottom:5vh;
-position: fixed;
-color:white;
-font-size: 30px;
-cursor: pointer;
+    background-color: #6DD41F;
+    box-shadow: 0px 3px 6px #00000029;
+    border-radius: 50px;
+    opacity: 1;
+    width: 50px;
+    height: 50px;
+    margin-left: 75vw;
+    bottom:5vh;
+    position: fixed;
+    color:white;
+    font-size: 30px;
+    cursor: pointer;
   }
   .add-new-btn:hover{
     background: var(--unnamed-color-ffffff) 0% 0% no-repeat padding-box;
-    border: 3px solid var(--unnamed-color-00d8ff);
+    border: 3px solid var(--unnamed-color-6DD41F);
     background: #FFFFFF 0% 0% no-repeat padding-box;
     box-shadow: 0px 3px 6px #00000029;
-    border: 3px solid #00D8FF;
+    border: 3px solid #6DD41F;
     border-radius: 50px;
     opacity: 1;
     font-size: 30px;
-    color:  #00D8FF;
+    color: #6DD41F;
 
   }
   
