--- a/src/component/warps/configurator/newConfigurator/new_configurator.css
+++ b/src/component/warps/configurator/newConfigurator/new_configurator.css
@@ -3,7 +3,7 @@
   background: #0A102E 0% 0% no-repeat padding-box;
   border: 1px solid #707070;
   border-radius: 0px 80px 0px 0px;
-  margin-top:-7vh; 
+  /* margin-top:-7vh;  */
  
   }
 
