--- a/src/component/hub/viewDetails/viewDetails.css
+++ b/src/component/hub/viewDetails/viewDetails.css
@@ -9,7 +9,7 @@ height:80vh;
 top:0;
 right: 0;
 z-index: 999;
-border-left: 9px solid #1AFFFC  ;
+border-left: 9px solid  #6DD41F;
 
 }
 .inputTextproject{
